# yolov8-coreml-cpp

./: .clang-format  CMakeLists.txt  README.md  main.cpp  objcWrapper.h  objcWrapper.mm  objc_wrapper.mm
coreml/: yolov8n_face_relu6.h  yolov8n_face_relu6.m
coreml/yolov8n_face_relu6.mlmodelc/: metadata.json  model.mil
coreml/yolov8n_face_relu6.mlpackage/: Manifest.json
coreml/yolov8n_face_relu6.mlpackage/Data/com.apple.CoreML/: model.mlmodel
